[package]
name = "uncomment"
version = "0.1.0"
authors = ["Niels Sonnich Poulsen <niels@nielssp.dk>"]
edition = "2018"

[dependencies]
# Logging, config, and error handling
dotenv = "0.15"
log = "0.4"
env_logger = "0.8"
thiserror = "1.0"
config = "0.11"

# Dates
chrono = { version = "0.4", features = ["serde"] }
time = "0.2"

# Web service
actix-web = "3"
actix-cors = "0.5"
actix-files = "0.5"
actix-multipart = "0.3"
tempfile = "3"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Comment import
minidom = "0.13"

# Markdown and HTML sanitazion
pulldown-cmark = "0.8"
ammonia = "3"

# Database
quaint = { version = "0.1", features = ["sqlite", "pooled", "chrono"] }

# Auth
argonautica = "0.2"
rand = "0.8"
base64 = "0.13"
